efk/kibana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: logging
spec:
  gateways:
    - istio-system/ops-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kibana/
      rewrite:
        uri: /
      route:
        - destination:
            host: kibana-kibana
            port:
              number: 5601
